# pj04-receipt-divider

./: .gitignore  ISSUES.md  README.md  package-lock.json  package.json
.husky/: commit-msg  pre-commit
HelloWorld/: .prettierignore  README.md  app.js  app.json  eslint.config.js  package-lock.json  package.json  read.md  tailwind.config.js  tsconfig.json
Helloworld/: ContentView.swift  HelloworldApp.swift  Item.swift
Helloworld.xcodeproj/: project.pbxproj
HelloworldTests/: HelloworldTests.swift
HelloworldUITests/: HelloworldUITests.swift  HelloworldUITestsLaunchTests.swift
ReceiptDivider/: app.json  package-lock.json  package.json
backend/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  foo.txt  generate_token.py  pyproject.toml  test.py
backend/app/: config.py  database.py  dependencies.py  main.py  supabase.py
backend/app/models/: __init__.py  group.py  group_member.py  item.py  item_claim.py  payment_debt.py  profile.py  receipt.py  user.py
backend/app/routers/: group.py  health.py  index.py  receipt.py  room.py
backend/app/schemas/: base.py  group.py  health.py  receipt.py  room.py
backend/app/services/: __init__.py  auth_service.py  invite_service.py  login_service.py  ocr_service.py  profile_serivce.py  user_service.py
backend/app/services/receipt_parser/: __init__.py  abbreviations.py  algorithm.py  checks.py  constants.py  detect.py  edge_cases.py  name_cleanup.py  stores.py  types.py  utils.py
backend/sql/functions/: on_user_leave.sql  validate_item_claim.sql
backend/sql/policies/: get_profile_group_id.sql
backend/sql/policies/user/: group_member_view.sql  groups_view.sql  item_claim_view.sql  item_view_policy.sql  receipt_view.sql  user_info_view.sql
backend/sql/tables/: 001_profiles.sql  002_groups.sql  003_receipts.sql  004_items.sql  005_item_claims.sql  006_group_members.sql  007_paid_status.sql  008_add_tax_to_receipts.sql  009_manual_receipt.sql  010_add_is_finished_to_groups.sql  011_payment_debts.sql  group_members.sql  groups.sql  item_claims.sql  items.sql  receipts.sql  users.sql  users_public_info.sql
backend/tests/: conftest.py  local_receipt_test.py  test_group_guard.py  test_receipt_parser.py  test_user_service.py
backend/tests/unit/: conftest.py  test_user_service.py
docs/: DEPLOY.md  DESIGN.md  MANUAL.md
frontend/: .gitignore  .prettierrc  README.md  eslint.config.js  jest.config.mjs  jest.config.ts  (+4 more)
(+255 files in other folders)
