[project]
name = "eezy-receipt-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "google-cloud-vision>=3.12.1",
    "openai>=2.21.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
]
