[project]
name = "eezy-receipt-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "google-cloud-vision>=3.12.1",
    "openai>=2.21.0",
    "python-dotenv>=1.2.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "supabase>=2.28.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "poethepoet>=0.42.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[tool.poe.tasks]
dev   = "fastapi dev app/main.py"
test  = "pytest"
lint  = "ruff check ."
lint-fix = "ruff check . --fix"
format   = "ruff format ."

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format=true
