[project]
name = "eezy-receipt-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "google-cloud-vision>=3.12.1",
    "httpx>=0.28.0",
    "openai>=2.21.0",
    "pillow>=11.0.0",
    "python-dotenv>=1.2.1",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "supabase>=2.28.0",
    "psycopg[binary]>=3.3.3",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "poethepoet>=0.42.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
    "pytest-postgresql>=8.0.0",
    "ruff>=0.15.4",
]

[tool.poe.tasks]
dev   = "fastapi dev app/main.py --host 0.0.0.0"
test  = "pytest"
lint  = "ruff check ."
lint-fix = "ruff check . --fix"
format   = "ruff format ."

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format=true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
